Here's the commented version of the code:

```c++
// Copyright 2023 gRPC authors.

#include "src/core/server/server_call_tracer_filter.h"

#include <grpc/support/port_platform.h>

#include <functional>
#include <memory>
#include <utility>

#include "absl/status/status.h"
#include "absl/status/statusor.h"
#include "src/core/call/call_finalization.h"
#include "src/core/config/core_configuration.h"
#include "src/core/lib/channel/channel_args.h"
#include "src/core/lib/channel/channel_fwd.h"
#include "src/core/lib/channel/channel_stack.h"
#include "src/core/lib/channel/promise_based_filter.h"
#include "src/core/lib/promise/arena_promise.h"
#include "src/core/lib/promise/cancel_callback.h"
#include "src/core/lib/promise/context.h"
#include "src/core/lib/promise/map.h"
#include "src/core/lib/promise/pipe.h"
#include "src/core/lib/surface/channel_stack_type.h"
#include "src/core/lib/transport/transport.h"
#include "src/core/telemetry/call_tracer.h"
#include "src/core/util/latent_see.h"

namespace grpc_core {

namespace {

// ServerCallTracerFilter is a channel filter that tracks and records call events
// for server-side calls. It implements various callbacks to capture metadata
// and finalization events, forwarding them to the ServerCallTracer for telemetry.
class ServerCallTracerFilter
    : public ImplementChannelFilter<ServerCallTracerFilter> {
 public:
  // The channel filter instance
  static const grpc_channel_filter kFilter;

  // Returns the filter type name
  static absl::string_view TypeName() { return "server_call_tracer"; }

  // Creates a new instance of ServerCallTracerFilter
  static absl::StatusOr<std::unique_ptr<ServerCallTracerFilter>> Create(
      const ChannelArgs& , ChannelFilter::Args );

  // Call represents the per-call state and handlers for the filter
  class Call {
   public:
    // Called when client initial metadata is received
    void OnClientInitialMetadata(ClientMetadata& client_initial_metadata) {
      GRPC_LATENT_SEE_INNER_SCOPE(
          "ServerCallTracerFilter::Call::OnClientInitialMetadata");
      auto* call_tracer = MaybeGetContext<ServerCallTracer>();
      if (call_tracer == nullptr) return;
      call_tracer->RecordReceivedInitialMetadata(&client_initial_metadata);
    }

    // Called when server initial metadata is about to be sent
    void OnServerInitialMetadata(ServerMetadata& server_initial_metadata) {
      GRPC_LATENT_SEE_INNER_SCOPE(
          "ServerCallTracerFilter::Call::OnServerInitialMetadata");
      auto* call_tracer = MaybeGetContext<ServerCallTracer>();
      if (call_tracer == nullptr) return;
      call_tracer->RecordSendInitialMetadata(&server_initial_metadata);
    }

    // Called when the call is finalized (completed)
    void OnFinalize(const grpc_call_final_info* final_info) {
      GRPC_LATENT_SEE_INNER_SCOPE("ServerCallTracerFilter::Call::OnFinalize");
      auto* call_tracer = MaybeGetContext<ServerCallTracer>();
      if (call_tracer == nullptr) return;
      call_tracer->RecordEnd(final_info);
    }

    // Called when server trailing metadata is about to be sent
    void OnServerTrailingMetadata(ServerMetadata& server_trailing_metadata) {
      GRPC_LATENT_SEE_INNER_SCOPE(
          "ServerCallTracerFilter::Call::OnServerTrailingMetadata");
      auto* call_tracer = MaybeGetContext<ServerCallTracer>();
      if (call_tracer == nullptr) return;
      call_tracer->RecordSendTrailingMetadata(&server_trailing_metadata);
    }

    // These interceptors are not implemented as they're not needed for tracing
    static inline const NoInterceptor OnClientToServerMessage;
    static inline const NoInterceptor OnClientToServerHalfClose;
    static inline const NoInterceptor OnServerToClientMessage;
  };
};

// Instantiate the channel filter with server-side specific configuration
const grpc_channel_filter ServerCallTracerFilter::kFilter =
    MakePromiseBasedFilter<ServerCallTracerFilter, FilterEndpoint::kServer,
                           kFilterExaminesServerInitialMetadata>();

// Creates a new ServerCallTracerFilter instance
absl::StatusOr<std::unique_ptr<ServerCallTracerFilter>>
ServerCallTracerFilter::Create(const ChannelArgs& ,
                               ChannelFilter::Args ) {
  return std::make_unique<ServerCallTracerFilter>();
}

}  // namespace

// Registers the ServerCallTracerFilter with gRPC's core configuration
// to be used on server channels
void RegisterServerCallTracerFilter(CoreConfiguration::Builder* builder) {
  builder->channel_init()->RegisterFilter<ServerCallTracerFilter>(
      GRPC_SERVER_CHANNEL);
}

}  // namespace grpc_core
```

Key aspects of the comments added:
1. Added class-level documentation explaining the purpose of ServerCallTracerFilter
2. Documented each method's purpose and behavior
3. Explained the NoInterceptor members
4. Added context about the filter registration process
5. Included namespace closing comments for better readability
6. Explained the filter instantiation configuration
7. Added comments about the telemetry recording functionality

The comments maintain a consistent style and provide enough information for future maintainers to understand the code's purpose and behavior without being overly verbose.