Here's the commented version of the code:

```c++
// Copyright 2020 gRPC authors.

// Include necessary headers for gRPC core functionality
#include <grpc/impl/channel_arg_names.h>
#include <grpc/support/port_platform.h>

// Standard C++ headers
#include <functional>
#include <memory>
#include <optional>
#include <string>
#include <utility>

// Abseil logging and status headers
#include "absl/log/log.h"
#include "absl/status/status.h"
#include "absl/status/statusor.h"

// gRPC core headers
#include "src/core/call/metadata_batch.h"
#include "src/core/config/core_configuration.h"
#include "src/core/ext/filters/message_size/message_size_filter.h"
#include "src/core/lib/channel/channel_args.h"
#include "src/core/lib/channel/channel_fwd.h"
#include "src/core/lib/channel/channel_stack.h"
#include "src/core/lib/channel/promise_based_filter.h"
#include "src/core/lib/promise/arena_promise.h"
#include "src/core/lib/promise/context.h"
#include "src/core/lib/resource_quota/arena.h"
#include "src/core/lib/surface/channel_stack_type.h"
#include "src/core/lib/transport/transport.h"
#include "src/core/service_config/service_config.h"
#include "src/core/service_config/service_config_call_data.h"
#include "src/core/service_config/service_config_impl.h"
#include "src/core/service_config/service_config_parser.h"
#include "src/core/util/latent_see.h"
#include "src/core/util/ref_counted_ptr.h"

namespace grpc_core {

namespace {

// Filter that applies service config settings from channel args to calls
class ServiceConfigChannelArgFilter final
    : public ImplementChannelFilter<ServiceConfigChannelArgFilter> {
 public:
  // The channel filter instance
  static const grpc_channel_filter kFilter;

  // Returns the filter type name
  static absl::string_view TypeName() { return "service_config_channel_arg"; }

  // Factory method for creating the filter
  static absl::StatusOr<std::unique_ptr<ServiceConfigChannelArgFilter>> Create(
      const ChannelArgs& args, ChannelFilter::Args) {
    return std::make_unique<ServiceConfigChannelArgFilter>(args);
  }

  // Constructor that parses service config from channel args
  explicit ServiceConfigChannelArgFilter(const ChannelArgs& args) {
    // Get the service config string from channel args
    auto service_config_str = args.GetOwnedString(GRPC_ARG_SERVICE_CONFIG);
    if (service_config_str.has_value()) {
      // Try to create a service config object from the string
      auto service_config =
          ServiceConfigImpl::Create(args, *service_config_str);
      if (!service_config.ok()) {
        // Log error if service config parsing fails
        LOG(ERROR) << service_config.status().ToString();
      } else {
        // Store the successfully parsed service config
        service_config_ = std::move(*service_config);
      }
    }
  }

  // Call-specific handler class
  class Call {
   public:
    // Interceptor for client initial metadata
    void OnClientInitialMetadata(ClientMetadata& md,
                                 ServiceConfigChannelArgFilter* filter);
    
    // No-op interceptors for other call events
    static inline const NoInterceptor OnServerInitialMetadata;
    static inline const NoInterceptor OnServerTrailingMetadata;
    static inline const NoInterceptor OnClientToServerMessage;
    static inline const NoInterceptor OnClientToServerHalfClose;
    static inline const NoInterceptor OnServerToClientMessage;
    static inline const NoInterceptor OnFinalize;
  };

 private:
  // Reference-counted pointer to the service config
  RefCountedPtr<ServiceConfig> service_config_;
};

// Handler for client initial metadata
void ServiceConfigChannelArgFilter::Call::OnClientInitialMetadata(
    ClientMetadata& md, ServiceConfigChannelArgFilter* filter) {
  // Instrumentation scope for latency measurement
  GRPC_LATENT_SEE_INNER_SCOPE(
      "ServiceConfigChannelArgFilter::Call::OnClientInitialMetadata");
  
  // Get method-specific configs from service config
  const ServiceConfigParser::ParsedConfigVector* method_configs = nullptr;
  if (filter->service_config_ != nullptr) {
    method_configs = filter->service_config_->GetMethodParsedConfigVector(
        md.get_pointer(HttpPathMetadata())->c_slice());
  }
  
  // Get the call arena and create ServiceConfigCallData
  auto* arena = GetContext<Arena>();
  auto* service_config_call_data = arena->New<ServiceConfigCallData>(arena);
  
  // Set the service config and method configs for this call
  service_config_call_data->SetServiceConfig(filter->service_config_,
                                             method_configs);
}

// Static definition of the channel filter
const grpc_channel_filter ServiceConfigChannelArgFilter::kFilter =
    MakePromiseBasedFilter<ServiceConfigChannelArgFilter,
                           FilterEndpoint::kClient>();

}  // namespace

// Registers the ServiceConfigChannelArgFilter with gRPC core configuration
void RegisterServiceConfigChannelArgFilter(
    CoreConfiguration::Builder* builder) {
  builder->channel_init()
      ->RegisterFilter<ServiceConfigChannelArgFilter>(
          GRPC_CLIENT_DIRECT_CHANNEL)
      .ExcludeFromMinimalStack()  // Don't include in minimal stack
      .IfHasChannelArg(GRPC_ARG_SERVICE_CONFIG)  // Only if service config arg is present
      .Before<ClientMessageSizeFilter>();  // Position in filter chain
}

}  // namespace grpc_core
```

The comments explain:
1. The overall purpose of the filter (applying service config settings)
2. Key components like the factory method and constructor
3. The call handler implementation
4. The registration process and filter chain positioning
5. Important implementation details like error handling and memory management
6. The instrumentation for performance measurement

The comments are placed close to the relevant code and explain both what the code does and why it does it in many cases.